# rust-geo-booleanop

lib/: Cargo.toml
lib/src/boolean/: compare_segments.rs  compute_fields.rs  possible_intersection.rs  subdivide_segments.rs  sweep_event.rs
tests/: Cargo.toml
