[package]
name = "geo-booleanop"
version = "0.3.2"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/21re/rust-geo-booleanop"
description = "Rust implementation of the Martinez-Rueda Polygon Clipping Algorithm"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]

[dependencies]
geo-types = { version = "0.6.0", default-features = false }
num-traits = "0.2"
robust = "0.1"
float_next_after = "0.1"
array_stump = { git = "https://github.com/daef/rust-array-stump", rev = "16dd59cd0e556fb66841dda4564a836bb8cfa502" }
# array_stump = { path = "../../rust-array-stump/lib" }
by_address = "1.0.4"

[dev-dependencies]
rand = "0.3"

[features]
debug-booleanop = []
